Flowers/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flowers-ingress
  namespace: default
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: "kong"
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: flowers-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: flowers-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flowers-service
            port:
              number: 80
